--- a/style/main.css
+++ b/style/main.css
@@ -162,8 +162,7 @@ a:hover {
 }
 
 .m_box {
-    margin-left: 8px;
-    padding: 10px 0 0 10px;
+    padding: 20px 30px;
 }
 
 .title {
@@ -180,8 +179,6 @@ a:hover {
     background: #fff;
     color: #000;
     font-size: 12px;
-    padding: 5px 10px;
-    margin-right: 10px;
 }
 
 .search input {
@@ -197,8 +194,6 @@ a:hover {
     width: auto;
     color: #000;
     font-size: 12px;
-    margin-right: 10px;
-    background: #f4f4f4;
 }
 
 .content a {
@@ -343,46 +338,29 @@ a:hover {
 table.stylized {
     border-collapse: collapse;
     position: relative;
-    margin-bottom: 1em;
-}
-
-table.stylized thead {
-    border:1px solid #ccc;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
 }
 
 table.stylized th, table.stylized td {
     line-height: 18px;
     padding: 8px 12px;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
 }
 
 table.stylized th {
-    background-color: #f5f5f5 !important;
-    color: #000;
     text-align: left;
-    font-weight: lighter;
+    font-weight: bold;
+    border-bottom: 2px solid #ddd;
+    background-color: #f5f5f5 !important;
 }
 
 table.stylized tr.high {
-    background-color: #ffa !important;
-}
-
-table.stylized tfoot td {
-    background-color: #f2f2f2 !important;
-    border-bottom: 1px solid #ddd;
-    text-align: right;
-}
-
-table.stylized input {
-    margin-right: 10px;
-}
-
-table.stylized {
-    border: 1px solid #ccc;
+    background-color: #f5f5f5 !important;
 }
 
 table.stylized tbody tr:hover td {
-    background: #ffa;
+    background: #f5f5f5;
 }
 
 table.form-style td {
