--- a/style/main.css
+++ b/style/main.css
@@ -25,6 +25,13 @@ input[type=radio] {
     border: 0px;
 }
 
+/* * Addresses Firefox 4+ setting `line-height` on `input` using ` !important` in
+* the UA stylesheet. */
+button,
+input {
+    line-height: normal;
+}
+
 img {
     border: 0;
     vertical-align: middle;
@@ -226,30 +233,24 @@ a:hover {
 
 /* Buttons
 ---------------------------------------------------------------------*/
-
-.btn {
+.button {
     display: inline-block;
-    padding: 2px 15px 6px;
-    color: #777 !important;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 12px;
-    font-family: Tahoma, Arial, sans-serif;
+    *zoom: 1;
+    *display: inline;
+    padding: 0;
+    text-align: center;
+    overflow: visible;
+    vertical-align: middle;
+    position: relative;
+    text-decoration: none !important;
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
     border-radius: 20px;
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.9);
-    position: relative;
-    cursor: pointer;
     border: 1px solid #ccc !important;
-    background: #fff url("../images/btn-overlay.png") repeat-x !important;
-    height: 18px;
-    line-height: 20px;
-    text-align: center;
-
 }
 
-.btn:hover, .btn:focus, .btn:active {
+.button:hover, .button:focus, .button:active {
     outline: medium none;
     border: 1px solid #329ECC !important;
     opacity: 0.9;
@@ -260,47 +261,131 @@ a:hover {
     box-shadow: 0 0 5px rgba(82, 168, 236, 0.5);
 }
 
-.btn-green {
-    color: #fff !important;
+.button-text {
+    cursor: pointer;
+    border: none;
+    float: left;
+}
+
+.button-icon {
+    top: 7px;
+    left: 12px;
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    position: absolute;
+}
+
+.button input.button-text,
+.button button.button-text {
+    *line-height: normal;
+    overflow: visible;
+    border: none;
+    float: left;
+    padding: 2px 6px 1px 8px;
+}
+
+.button-blue, .button-green, .button-red, .button-white, .button-text {
+    outline: none;
+    padding: 2px 15px 6px;
+}
+
+.button-blue .button-text,
+.button-green .button-text,
+.button-red .button-text,
+.button-white .button-text {
+    height: 24px;
+    color: #fff;
+    font: 700 14px/1.2 Tahoma, Arial, sans-serif;
+}
+
+.button-green {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     border: 1px solid #749217 !important;
     background-color: #6AB620 !important;
 }
 
-.btn-green:hover, .btn-green:focus, .btn-green:active {
+.button-green .button-text {
+    background-color: #6AB620 !important;
+}
+
+.button-green:hover, .button-green:focus, .button-green:active {
     -moz-box-shadow: 0 0 5px rgba(116, 146, 23, 0.9);
     -webkit-box-shadow: 0 0 5px rgba(116, 146, 23, 0.9);
     box-shadow: 0 0 5px rgba(116, 146, 23, 0.9);
     border: 1px solid #749217 !important;
 }
 
-.btn-blue {
-    color: #fff !important;
+.button-blue {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     border: 1px solid #2D69AC !important;
     background-color: #3C6ED1 !important;
 }
 
-.btn-blue:hover, .btn-blue:focus, .btn-blue:active {
+.button-blue .button-text {
+    background-color: #3C6ED1 !important;
+}
+
+.button-blue:hover, .button-blue:focus, .button-blue:active {
     -moz-box-shadow: 0 0 5px rgba(71, 131, 243, 0.9);
     -webkit-box-shadow: 0 0 5px rgba(71, 131, 243, 0.9);
     box-shadow: 0 0 5px rgba(71, 131, 243, 0.9);
     border: 1px solid #2D69AC !important;
 }
 
-.btn-red {
-    color: #fff !important;
+.button-red {
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     border: 1px solid #AE2B2B !important;
     background-color: #D22A2A !important;
 }
 
-.btn-red:hover, .btn-red:focus, .btn-red:active {
+.button-red .button-text {
+    background-color: #D22A2A !important;
+}
+
+.button-red:hover, .button-red:focus, .button-red:active {
     -moz-box-shadow: 0 0 5px rgba(174, 43, 43, 0.9);
     -webkit-box-shadow: 0 0 5px rgba(174, 43, 43, 0.9);
     box-shadow: 0 0 5px rgba(174, 43, 43, 0.9);
     border: 1px solid #AE2B2B !important;
 }
+
+.button-white {
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    border: 1px solid #cfcfcf !important;
+    background-color: #efefef !important;
+}
+
+.button-white .button-text {
+    color: #333;
+    background-color: #efefef !important;
+}
+
+.button-white:hover, .button-white:focus, .button-white:active {
+    -moz-box-shadow: 0 0 5px rgba(181, 181, 181, 0.9);
+    -webkit-box-shadow: 0 0 5px rgba(181, 181, 181, 0.9);
+    box-shadow: 0 0 5px rgba(181, 181, 181, 0.9);
+    border: 1px solid #cfcfcf !important;
+}
+
+.button-search input.button-text,
+.button-search button.button-text {
+    padding-left: 18px;
+}
+
+.button-search .button-icon {
+    background: url("../images/search.png") no-repeat;
+}
+
+.button-printer input.button-text,
+.button-printer button.button-text {
+    padding-left: 18px;
+}
+
+.button-printer .button-icon {
+    background: url("../images/printer.png") no-repeat;
+}
+
 
 /* Icons
 ---------------------------------------------------------------------*/
@@ -396,7 +481,6 @@ input[type="text"], input[type="password"], input[type="select"], input[type="se
     border-width: 1px;
     padding: 4px;
     color: #777;
-
 }
 
 textarea {
@@ -424,18 +508,17 @@ input.half, select.half, textarea.half {
 input.full, select.full, textarea.full {
     width: 97%;
 }
-
+/*
 input[type="submit"], input[type="reset"], input[type="button"] {
     margin-bottom: 0;
     height: 30px;
     padding: 0 20px;
 }
-
-input:focus, textarea:focus {
+*/
+input[type="text"]:focus,input[type="password"]:focus, textarea:focus {
     /*-moz-box-shadow:5px 5px 5px rgba(196,196,196,0.5);
     -webkit-box-shadow:0 1px 1px rgba(196,196,196,0.5);
     box-shadow:0 1px 1px rgba(196,196,196,0.5);*/
-
     -webkit-focus-ring-color: none;
     border-color: #c4c4c4;
     background-color: #FFFFF0;
