--- a/views/templates/home/screen/index.vm
+++ b/views/templates/home/screen/index.vm
@@ -1,21 +1,1 @@
-<div class="row">
-    <div class="large-3 columns">
-        <img src="$!ui.logo">
-    </div>
-    <div class="large-9 columns">
-        <p>spider 是一个前端服务化的项目构建脚手架，它不包含前端ui库和组件，使用者可以按照个人喜好将它们整合进来，下载到本地便于二次开发。</p>
-        <ul class="feature">
-            <li><p>脚手架使用Express框架开发，安装部署十分简单；</p></li>
-
-            <li><p>前端资源使用当下流行的构建工具grunt和gulp（TODO）打包部署；</p></li>
-
-            <li><p>用户可以自定义模板引擎，目前脚手架使用的是velocityjs引擎；</p></li>
-
-            <li><p>独有的ui设计支持全局或者私有定义Layout布局、页头页脚、脚本样式，view配置，使用json统一配置；</p></li>
-
-            <li><p>View层解耦使得前后端专注于各自的开发，同时提高团队开发效率；</p></li>
-
-            <li><p>脚手架遵循一定的结构，可以更好地规范化开发；</p></li>
-        </ul>
-    </div>
-</div>
+dsfsdfsdfsdf
