--- a/views/templates/home/screen/index.vm
+++ b/views/templates/home/screen/index.vm
@@ -5,9 +5,8 @@
         <div class="row">
             <div class="control-group">
                 <label class="control-label">查询条件：</label>
-
                 <div class="controls">
-                    <select name="userType" class="easyui-combobox">
+                    <select name="condition" class="easyui-combobox">
                         <option value="1" selected>用户名称</option>
                         <option value="2">档案编号</option>
                         <option value="3">手机号码</option>
@@ -21,7 +20,7 @@
             <div class="control-group">
                 <label class="control-label"></label>
                 <div class="controls">
-                    <input class="easyui-textbox" data-options="prompt:'查询条件'" />
+                    <input class="easyui-textbox" name="explain" data-options="prompt:'查询条件'" />
                 </div>
             </div>
         </div>
@@ -29,9 +28,8 @@
         <div class="row">
             <div class="control-group">
                 <label class="control-label">用户类型：</label>
-
                 <div class="controls">
-                    <select name="" class="easyui-combobox">
+                    <select name="userType" class="easyui-combobox">
                         <option selected value="">请选择</option>
                         <option value="TYPE1">类型1</option>
                         <option value="TYPE2">类型2</option>
@@ -41,9 +39,8 @@
             </div>
             <div class="control-group">
                 <label class="control-label">表具类型：</label>
-
                 <div class="controls">
-                    <select name="" class="easyui-combobox" style="width:200px">
+                    <select name="meterType" class="easyui-combobox" style="width:200px">
                         <option selected value="">请选择</option>
                         <option value="TYPE1">类型1类型1类型1类型1</option>
                         <option value="TYPE2">类型2</option>
@@ -56,11 +53,9 @@
         <div class="row">
             <div class="control-group">
                 <label class="control-label">时间区间：</label>
-
                 <div class="controls"><input type="text" class="easyui-datebox"
                                              data-options="prompt:'起始日期', sharedCalendar:'#J_cc'"/></div>
                 <label class="control-label" style="width:43px;">至：</label>
-
                 <div class="controls"><input type="text" class="easyui-datebox"
                                              data-options="prompt:'结束日期', sharedCalendar:'#J_cc'"/></div>
             </div>
@@ -88,14 +83,21 @@
             <div class="control-group">
                 <label class="control-label">所属机构：</label>
                 <div class="controls">
-                    <input class="easyui-combotree" value="122" data-options="prompt:'所属机构',url:'home/combotree.json',method:'get'" style="width:200px;">
+                    <input class="easyui-combotree" name="organization" value="122"
+                    data-options="prompt:'所属机构',
+                                url:'home/combotree.json',
+                                method:'get'"
+                                style="width:200px;">
                 </div>
             </div>
             <div class="control-group form-actions">
-                <span class="button button-white button-search">
+                <!--<span class="button button-white button-search">
                     <input class="button-text" type="submit" value="查询"/>
                     <span class="button-icon"></span>
-                </span>
+                </span>-->
+                <div class="controls">
+                    <a href="#" class="easyui-linkbutton" data-options="iconCls:'icon-search'" style="width:80px">查询</a>
+                </div>
             </div>
         </div>
     </form>
