--- a/static/css/global/1.0.0/function.css
+++ b/static/css/global/1.0.0/function.css
@@ -12,10 +12,31 @@ function css
     display: inline-block;
 }
 
+
+.fn-left {
+    float: left;
+}
+
+.fn-right {
+    float: right;
+}
+
 .fn-mr10 {
     margin-right: 10px;
 }
 
 .fn-mr20 {
     margin-right: 20px;
+}
+
+.fn-ml10 {
+    margin-left: 10px;
+}
+
+.fn-ml20 {
+    margin-left: 20px;
+}
+
+.fn-ml30 {
+    margin-left: 30px;
 }
