--- a/static/css/global/1.0.0/main.css
+++ b/static/css/global/1.0.0/main.css
@@ -8,29 +8,45 @@ html, body {
 }
 
 body {
-    background: #fff !important;
-    font-family: "Î¢ÈíÑÅºÚ", Arial;
+    background: url("../images/page_bg.png") 0px 0px #fff !important;
+    font-family: "å¾®è½¯é›…é»‘", Arial;
     font-size: 12px;
     line-height: 1em;
     color: #000;
 }
 
-input, select, textarea {
-    font-family: "Î¢ÈíÑÅºÚ", Arial, sans-serif;
-    font-size: 1em;
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    float: auto;
+    width: 100%;
+}
+
+ul li {
+    margin: auto;
+}
+
+img {
+    border: 0;
     vertical-align: middle;
+    text-align: left;
 }
 
-input[type=radio] {
-    border: 0px;
+.clear {
+    clear: both;
+    height: 0px;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
 /* * Addresses Firefox 4+ setting `line-height` on `input` using ` !important` in
 * the UA stylesheet. */
-button,
-input {
-    line-height: normal;
-}
 
 img {
     border: 0;
@@ -55,40 +71,6 @@ p {
     line-height: 1.5em;
 }
 
-.full {
-    width: 100%;
-}
-
-.half {
-    width: 50%
-}
-
-.fleft {
-    float: left;
-}
-
-.fright {
-    float: right;
-}
-
-.alignright {
-    text-align: right;
-}
-
-.aligncenter {
-    text-align: center;
-}
-
-.wrapper {
-    width: 100%;
-    overflow: hidden;
-}
-
-.clear {
-    clear: both;
-    height: 0px;
-}
-
 h1,
 h2,
 h3,
@@ -105,7 +87,7 @@ h6,
     font-weight: 900;
     line-height: 1.5;
     color: inherit;
-    font-family: "Î¢ÈíÑÅºÚ", Arial;
+    font-family: "Î¢ï¿½ï¿½ï¿½Åºï¿½", Arial;
 }
 h1,
 .h1 {
@@ -139,14 +121,6 @@ hr {
     border-top: 1px solid #eeeeee;
 }
 
-a {
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
 .container {
     position: relative;
 }
@@ -172,29 +146,11 @@ a:hover {
     padding: 20px 30px;
 }
 
-.title {
-    width: auto;
-    height: 34px;
-    color: #fff;
-    padding-left: 10px;
-    margin-right: 10px;
-    border-bottom: 1px #ccc solid;
-}
-
 .search {
     width: auto;
     background: #fff;
     color: #000;
     font-size: 12px;
-}
-
-.search input {
-    height: 14px;
-    width: 150px;
-}
-
-.search select {
-    width: 100px;
 }
 
 .content {
@@ -209,71 +165,4 @@ a:hover {
 
 .content img {
     margin-left: 20px;
-}
-
-.con_head a:hover {
-    text-decoration: underline;
-}
-
-/*.search img:hover{
-	border:1px solid #329ECC !important;
-	}*/
-
-/* Boxes
----------------------------------------------------------------------*/
-
-.box {
-    padding: 8px;
-    margin-bottom: 8px;
-    color: #555;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    background: #eee;
-}
-
-/* Tables
----------------------------------------------------------------------*/
-
-table.stylized {
-    border-collapse: collapse;
-    position: relative;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-}
-
-table.stylized th, table.stylized td {
-    line-height: 18px;
-    padding: 8px 12px;
-    border: 1px solid #ddd;
-}
-
-table.stylized th {
-    text-align: left;
-    font-weight: bold;
-    border-bottom: 2px solid #ddd;
-    background-color: #f5f5f5 !important;
-}
-
-table.stylized tr.high {
-    background-color: #f5f5f5 !important;
-}
-
-table.stylized tbody tr:hover td {
-    background: #f5f5f5;
-}
-
-table.form-style td {
-    line-height: 18px;
-    padding: 4px 8px 4px 0;
-}
-
-table.form-style td, {
-    background: none !important;
-    color: #666;
-    border-bottom: 0 none;
-}
-
-table.form-style caption {
-    margin-bottom: 0;
-    text-align: left;
 }
