--- a/static/css/global/1.0.0/global.css
+++ b/static/css/global/1.0.0/global.css
@@ -5,4 +5,5 @@
 @import url("./button.css");
 @import url("./header.css");
 @import url("./leftmenu.css");
+@import url("./zzsc.css");
 @import url("./copyright.css");
