--- a/static/css/global/1.0.0/global.css
+++ b/static/css/global/1.0.0/global.css
@@ -6,5 +6,5 @@
 @import url("./header.css");
 @import url("./leftmenu.css");
 @import url("./zzsc.css");
-@import url("./magictabs.css");
+@import url("./tabPanel.css");
 @import url("./copyright.css");
