--- a/views/templates/home/screen/tab.vm
+++ b/views/templates/home/screen/tab.vm
@@ -85,7 +85,7 @@
                 <div class="controls">
                     <input class="easyui-combotree" name="organization" value="122"
                     data-options="prompt:'所属机构',
-                                url:'home/combotree.json',
+                                url:'/home/combotree.json',
                                 method:'get'"
                                 style="width:200px;">
                 </div>
@@ -105,7 +105,7 @@
 
 <div class="content">
     <table id="tt" class="easyui-datagrid"
-           url="home/datagrid"
+           url="/home/datagrid"
            title=""
            pagination="true"
            toolbar="#tb">
