--- a/static/css/global/1.0.0/main.css
+++ b/static/css/global/1.0.0/main.css
@@ -3,11 +3,20 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     /*font-family: "微软雅黑", Arial;*/
     font-size: 12px;
     color: #000;
     background: #fff;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
 }
 
 ul {
@@ -36,6 +45,7 @@ hr {
 }
 
 .container {
+    height: 100%;
     position: relative;
 }
 
@@ -52,6 +62,7 @@ hr {
     margin-left: 220px;
     position: relative;
     overflow: auto;
+    height: 100%;
 }
 
 .m_box {
