--- a/views/ui/theme/report/head.vm
+++ b/views/ui/theme/report/head.vm
@@ -1,6 +1,3 @@
-#*
-@description: 默认头部
-*#
 <!DOCTYPE html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -26,11 +23,4 @@
         <script src="/assets/jquery-1.11.1.min.js"></script>
     </head>
     <body>
-    <div class="head">
-
-    </div>
-    <div class="container">
-        ##侧边栏
-        #cmsparse("component/sidebar.vm")
-        <div class="main_box">
-            <div class="m_box">
+    <div style="padding:30px 20px">
