--- a/static/css/global/1.0.0/main.css
+++ b/static/css/global/1.0.0/main.css
@@ -5,6 +5,8 @@
 
 html, body {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -12,11 +14,6 @@ body {
     font-size: 12px;
     color: #000;
     background: #fff;
-}
-
-iframe {
-    width: 100%;
-    height: 100%;
 }
 
 ul {
@@ -41,12 +38,12 @@ hr {
     margin-top: 20px;
     margin-bottom: 20px;
     border: 0;
-    border-top: 1px solid #eeeeee;
+    border-top: 1px solid #eee;
 }
 
 .container {
-    height: 100%;
     position: relative;
+    height: 100%;
 }
 
 .side_box {
@@ -54,19 +51,18 @@ hr {
     left: 0;
     top: 0;
     width: 200px;
-    overflow: auto;
     padding: 20px 0 0 20px;
 }
 
 .main_box {
     margin-left: 220px;
     position: relative;
-    overflow: auto;
     height: 100%;
 }
 
 .m_box {
     padding: 20px;
+    height: 100%;
 }
 
 .search {
