--- a/static/css/global/2.0.0/tabPanel.css
+++ b/static/css/global/2.0.0/tabPanel.css
@@ -22,29 +22,40 @@
 }
 
 .tabpanel_mover {
-    overflow: hidden;
     width: 5000px;
+    float: left;
     margin: 0;
-    padding: 0;
+    padding-left: 20px;
     position: relative;
     border-bottom: 1px solid #ddd;
 }
 
 .tabpanel_mover li {
-    border: 1px solid #ddd;
-    border-bottom-color: transparent;
+    margin-right: 5px;
+    margin-bottom: -1px;
     padding: 10px 25px;
+    border: 1px solid #ddd;
+    border-radius: 5px 5px 0px 0px;
+    background: #ddd;
     float: left;
     position: relative;
     list-style-type: none;
     cursor: pointer;
 }
 
+.tabpanel_mover li.active {
+    background: #428bca;
+    color: #fff;
+    cursor: default;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+}
+
 .tabpanel_mover li .closer {
     background: transparent url(../../../images/wdScrollTab/TabPanel/tab-close.gif) no-repeat;
     position: absolute;
-    right: 2px;
-    top: 2px;
+    right: 5px;
+    top: 5px;
     width: 11px;
     height: 11px;
     cursor: pointer;
@@ -56,13 +67,9 @@
     float: left;
 }
 
-.tabpanel_mover li div {
-    color: #23508E;
-}
-
 .tabpanel_mover li .icon_title {
     font-size: 12px;
-    color: #23508E;
+    color: #000;
     padding-left: 25px;
     background-repeat: no-repeat;
     background-position: 5px 4px;
@@ -74,17 +81,8 @@
     *background-position: 5px 1px;
 }
 
-.tabpanel_mover li.active {
-    background: #fff;
-    font-weight: bold;
-    cursor: default;
-    border: 1px solid #ddd;
-    border-bottom-color: transparent;
-}
-
 .tabpanel_tab_content .tabpanel_left_scroll {
     background: transparent url(../../../images/wdScrollTab/TabPanel/scroll-left.gif) no-repeat 0px 0;
-    /*border-bottom: solid 1px #8DB2E3;*/
     position: absolute;
     width: 18px;
     height: 24px;
