更新界面样式

--- a/static/css/global/2.0.0/dashboard.css
+++ b/static/css/global/2.0.0/dashboard.css
@@ -8,7 +8,7 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
     padding-top: 50px;
 }
 
