--- a/static/css/global/2.0.0/tabPanel.css
+++ b/static/css/global/2.0.0/tabPanel.css
@@ -31,33 +31,37 @@
 }
 
 .tabpanel_mover li {
-    margin-right: 5px;
     margin-bottom: -1px;
     padding: 10px 25px;
-    border: 1px solid #ddd;
+    border: 1px solid transparent;
     border-radius: 5px 5px 0px 0px;
-    background: #ddd;
     float: left;
     position: relative;
     list-style-type: none;
     cursor: pointer;
 }
 
+.tabpanel_mover li:hover {
+    background: #ddd;
+}
+
 .tabpanel_mover li.active {
-    background: #428bca;
-    color: #fff;
+    background: #fff;
     cursor: default;
     border: 1px solid #ddd;
     border-bottom-color: transparent;
 }
 
 .tabpanel_mover li .closer {
-    background: transparent url(../../../images/wdScrollTab/TabPanel/tab-close.gif) no-repeat;
     position: absolute;
-    right: 5px;
-    top: 5px;
+    right: 6px;
+    top: 6px;
     width: 11px;
     height: 11px;
+    font-family: tahoma;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 14px;
     cursor: pointer;
 }
 
@@ -82,24 +86,23 @@
 }
 
 .tabpanel_tab_content .tabpanel_left_scroll {
-    background: transparent url(../../../images/wdScrollTab/TabPanel/scroll-left.gif) no-repeat 0px 0;
+    background: #ccc;
     position: absolute;
     width: 18px;
-    height: 24px;
+    height: 39px;
     left: 0px;
-    top: 1px;
+    top: 0px;
     cursor: pointer;
     z-index: 10;
 }
 
 .tabpanel_tab_content .tabpanel_right_scroll {
-    background: transparent url(../../../images/wdScrollTab/TabPanel/scroll-right.gif) no-repeat 0 0;
-    border-bottom: solid 1px #8DB2E3;
+    background:  #ccc;
     position: absolute;
     width: 18px;
-    height: 24px;
+    height: 39px;
     right: 0px;
-    top: 1px;
+    top: 0px;
     cursor: pointer;
     z-index: 10;
 }
@@ -136,15 +139,14 @@
 }
 
 .tabpanel_content {
-    background-color: #FFF;
-    /*overflow: auto;*/
+    background-color: #fff;
     position: relative;
 }
 
 .tabpanel_content .html_content {
     width: 100%;
     height: 100%;
-    background-color: #FFF;
+    background-color: #fff;
     position: absolute;
     z-index: 0;
     left: 0;
